# ClipGrab

./: .gitignore  CMakeLists.txt  COPYING  ClipGrab.plist  README.md  clipgrab.cpp  clipgrab.pro  converter_ffmpeg.cpp  main.cpp  resources.qrc
.github/: FUNDING.yml
html/: html.qrc  search-styles.css
images/: images.qrc
src/: CMakeLists.txt  clipgrab.cpp  converter_ffmpeg.cpp  converter_ffmpeg.h  helper_downloader.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  update_message.ui  video.cpp
